<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ford.mg.activity.CustomerOrderActivity">

    <EditText
        android:id="@+id/customer_order_screen_label"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="12"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/customer_order_screen_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="6dp" />

    <Button
        android:id="@+id/buttonCOtoCI"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onClickSwitchToCustomerIdentificationActivity"
        android:text="@string/CustID"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonCOtoL"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSwitchToLoaderActivity"
        android:text="@string/Loader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/place_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickPlaceOrder"
        android:text="@string/place_order_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/customer_order_screen_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_order_screen_label"
        tools:layout_editor_absoluteY="88dp" />

    <EditText
        android:id="@+id/orderNumberLabel"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="Order Number"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="Order Number:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/place_order_button"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/customer_order_order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orderNumberLabel"
        app:layout_constraintLeft_toRightOf="@id/orderNumberLabel"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_editor_absoluteY="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/place_order_button"/>


</android.support.constraint.ConstraintLayout>