<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ford.mg.activity.CustomerIdentification">

    <EditText
        android:id="@+id/customer_identification_screen_label"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="12"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/customer_identification_screen_label"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="6dp" />

    <Button
        android:id="@+id/buttonCItoCR"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onClickSwitchToCustomerReceiptActivity"
        android:text="@string/CustReceipt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonCItoCO"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSwitchOrderActivity"
        android:text="@string/CustOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
    android:id="@+id/customer_identification_spinner_label"
    android:layout_width="189dp"
    android:layout_height="wrap_content"
    android:editable="false"
    android:ems="10"
    android:gravity="center_horizontal"
    android:inputType="textMultiLine"
    android:text="@string/customer_identification_spinner_label"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/customer_identification_screen_label"
        />

       <Spinner
        android:id="@+id/customer_identification_spinner"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_identification_spinner_label" />

    <EditText
        android:id="@+id/current_customer_label"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="Current Customer"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="Current Customer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_identification_spinner"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/current_customer_identification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:editable="false"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/current_customer_label"
        app:layout_constraintLeft_toRightOf="@id/current_customer_label"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_editor_absoluteY="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/customer_identification_spinner"
        app:layout_constraintBottom_toBottomOf="@id/current_customer_label"/>

</android.support.constraint.ConstraintLayout>
