<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ford.mg.activity.CustomerReceiptActivity">

    <EditText
        android:id="@+id/customer_receipt_screen_label"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="12"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/customer_receipt_screen_label"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="6dp" />

    <EditText
        android:id="@+id/customer_receipt_orders_label"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:text="@string/customer_receipt_orders_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_receipt_screen_label" />
    />

    <Spinner
        android:id="@+id/customer_receipt_order_spinner"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_receipt_orders_label" />
<!--Vehicle-->
    <EditText
        android:id="@+id/customer_receipt_vehicle_label"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="Vehicle identification associated with the Order"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="Vehicle:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_receipt_order_spinner"
        app:layout_constraintVertical_bias="0.5" />
    <EditText
        android:id="@+id/customer_receipt_vehicle_id"
        android:layout_width="wrap_content"
        android:editable="false"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/customer_receipt_vehicle_label"
        app:layout_constraintLeft_toRightOf="@id/customer_receipt_vehicle_label"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_editor_absoluteY="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/customer_receipt_order_spinner"
        />
    <!--Combination-->
    <EditText
        android:id="@+id/customer_receipt_combination_label"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:contentDescription="Combination associated with the Order"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="Combination:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_receipt_vehicle_label"
        app:layout_constraintVertical_bias="0.5" />
    <EditText
        android:id="@+id/customer_receipt_combination"
        android:layout_width="wrap_content"
        android:editable="false"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/customer_receipt_combination_label"
        app:layout_constraintLeft_toRightOf="@id/customer_receipt_combination_label"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_editor_absoluteY="150dp"
        app:layout_constraintTop_toBottomOf="@id/customer_receipt_vehicle_label"
        />
<!--Open Button-->
    <Button
        android:id="@+id/customer_receipt_button_open"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="onClickCustomerLockerOpen"
        android:text="@string/Open"
        app:layout_constraintTop_toBottomOf="@id/customer_receipt_combination"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent" />
    <!--Left Button-->
    <Button
        android:id="@+id/buttonCRtoL"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onClickSwitchToLoaderActivity"
        android:text="@string/Loader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!--Right Button-->
    <Button
        android:id="@+id/buttonCRtoCI"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onClickSwitchToCustomerIdentificationActivity"
        android:text="@string/CustID"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>