<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ford.mg.activity.LoaderActivity">

    <EditText
        android:id="@+id/loader_screen_label"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="12"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/loader_screen_label"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="6dp" />

    <Button
        android:id="@+id/buttonLtoCO"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onClickSwitchToCustomerOrderActivity"
        android:text="@string/CustOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent" />


    <Button
        android:id="@+id/buttonLtoCR"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onClickSwitchToCustomerReceiptActivity"
        android:text="@string/CustReceipt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/unfulfilled_orders_label"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:text="@string/unfulfilled_orders_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loader_screen_label" />
    />

    <Spinner
        android:id="@+id/unfulfilled_order_spinner"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unfulfilled_orders_label" />



    <EditText
        android:id="@+id/unfulfilled_vehicle_label"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="Vehicle identification associated with the Order"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="Vehicle:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unfulfilled_order_spinner"
        app:layout_constraintVertical_bias="0.5" />
    <EditText
        android:id="@+id/loader_vehicle_id"
        android:layout_width="wrap_content"
        android:editable="false"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/unfulfilled_vehicle_label"
        app:layout_constraintLeft_toRightOf="@id/unfulfilled_vehicle_label"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_editor_absoluteY="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/unfulfilled_order_spinner"
        />
    <EditText
        android:id="@+id/unfulfilled_locker_label"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:contentDescription="Locker identification associated with the Order"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="Locker:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unfulfilled_vehicle_label"
        app:layout_constraintVertical_bias="0.5" />
    <EditText
        android:id="@+id/loader_locker_id"
        android:layout_width="wrap_content"
        android:editable="false"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/unfulfilled_locker_label"
        app:layout_constraintLeft_toRightOf="@id/unfulfilled_locker_label"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_editor_absoluteY="150dp"
        app:layout_constraintTop_toBottomOf="@id/unfulfilled_vehicle_label"
        />
    <EditText
        android:id="@+id/unfulfilled_combination_label"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:contentDescription="Combination associated with the Order"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="Combination:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unfulfilled_locker_label"
        app:layout_constraintVertical_bias="0.5" />
    <EditText
        android:id="@+id/loader_combination"
        android:layout_width="wrap_content"
        android:editable="false"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/unfulfilled_combination_label"
        app:layout_constraintLeft_toRightOf="@id/unfulfilled_combination_label"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_editor_absoluteY="150dp"
        app:layout_constraintTop_toBottomOf="@id/unfulfilled_locker_label"
        />

    <Button
        android:id="@+id/button_loader_open"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="onClickLoaderOpenLocker"
        android:text="@string/Open"
        app:layout_constraintTop_toBottomOf="@id/loader_combination"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/fulfill_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickFufillOrder"
        android:text="@string/fulfill_order_button_text"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/button_loader_open"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_loader_open"
        tools:layout_editor_absoluteY="88dp" />
</android.support.constraint.ConstraintLayout>